RTLScramble_html/styles/RTLScramble.css
#snippets{
	display: none;
}

.spacer{
	width: 15px;
	/* background-color: blue; */
	height: 23px;
	float: left;
	
	margin-top: 2px;
}

#main > img{
	position:absolute;
	left: 5px;
	top: 5px;
} 

.letterContainer{
    /* display: inline-block; */
    cursor: pointer;
    width: 18px;
    /* background-color: lightcoral; */
    height: 23px;
    position: relative;
    float: left;
    margin: 1px 1px 0px 0px;
}

.letter {
    padding: 2px; 
    text-align: center;
    height: 16px;
}

.wordContainer:hover > .word{
	display:none;
}

.wordContainer > div.letterContainer,
.wordContainer > div.spacer{
	opacity:0;
}

.wordContainer:hover > div.letterContainer,
.wordContainer:hover > div.spacer{
	opacity:1;
}

.wordContainer{
    background-color: #BEBDBD;
	
    position: absolute;
    padding: 4px 3px 1px 3px;
    height: 28px;
    border-radius: 3px;
}

.word{
    position: absolute;
	
    margin-top: 2px;
    /* background-color: red; */
    width: 85%;
    text-align: center;
}

.blankLetter{
	
}

.leftDrop{
    /* background-color: #DAE9FF; */
	
    position: absolute;
    height: 100%;
    width: 49%;
    left: 0px;
}

.rightDrop{
    /* background-color: #FFD8D8; */
    height: 100%;
    width: 49%;	
	
    left: 50%;
    position: absolute;
    margin-left: 1px;
}

.dropContainer{
    /* background-color: purple; */
	
    width: 100%;
    height: 100%;
    position: absolute;
    opacity: .5;
}

.overLeft{
	/*background-color: red;*/
    border-left: 3px solid black;
}

.overRight{
	/*background-color: red;*/
    border-right: 3px solid black;
}

.ui-draggable-dragging{
	opacity: .6;
	background-color:transparent;
}

.highlightLetter{
    font-weight: bold;
	color:blue;
}

#feedback {
    -moz-user-select: none;
    background: url("../../common/img/bg_dropbubble_50.png") repeat-x scroll center bottom #f5f5f5;
    border: 1px solid #bdbdbd;
    border-radius: 3px;
    box-shadow: 0 2px 4px #bdbdbd;
    display: block;
    left: 10px;
    max-height: 100px;
    min-height: 100px;
    padding: 20px;
    position: absolute;
    top: 540px;
    width: 603px;
    z-index: 100;
}
#feedbackBtn:hover {
	background-color: #AFAFAF;
	color: #303030;
}

#feedbackBtn {
	cursor: pointer;
    bottom: 10px;
    position: absolute;
    right: 10px;
    background-color: lightgrey;
    
	padding: 5px 12px;
    border-radius: 3px;
    
	border: 1px solid grey;
	display: none;
}
#feedbackHeader {
    font-size: 20px;
    letter-spacing: 2px;
    margin-top: -10px;
    text-align: center;
    margin-bottom: -16px;
}

#setTitle {
    background-image: url("../../common/img/bg_btn_set.png") !important;
    border-bottom-left-radius: 4px;
    border-color: rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.25);
    border-top-left-radius: 4px;
    color: #ffffff;
    float: left;
    font-size: 14px;
    margin-left: 0;
    padding-left: 10px;
    padding-top: 7px;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
}
#setText {
    border-radius: 0 4px 4px 0;
    bottom: auto;
    font-size: 14px;
    height: 20px;
    /* margin-left: -7px; */
    padding-right: 7px;
    padding-top: 7px;
    position: relative;
    top: 0;
    width: 29px;
    float: left;
}

.btn_set {
    background-color: #999999;
    background-image: url("../../common/img/bg_btn_set.png") !important;
    background-position: center bottom !important;
    background-repeat: repeat-x !important;
    color: #ffffff;
    left: 3px;
    letter-spacing: 2px;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
}
.btn {
    -moz-border-bottom-colors: none;
    -moz-border-left-colors: none;
    -moz-border-right-colors: none;
    -moz-border-top-colors: none;
    background-image: url("../../common/img/bg_btn.png");
    /* background-position: center bottom; */
    /* background-repeat: repeat-x; */
    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) #a2a2a2;
    /* border-image: none; */
    border-style: solid;
    border-width: 1px;
    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
    color: #444444;
    cursor: pointer;
    /* display: inline-block; */
    font-size: 14px;
    line-height: 20px;
    /* margin-bottom: 0; */
    padding: 4px 12px;
    /* text-align: center; */
    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
    /* vertical-align: middle; */
    float: left;
    width: 63px;
}
.bootstrapLabel {
    -moz-border-bottom-colors: none;
    -moz-border-left-colors: none;
    -moz-border-right-colors: none;
    -moz-border-top-colors: none;
    background-color: #f5f5f5;
    background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
    background-repeat: repeat-x;
    border-color: rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.25);
    border-image: none;
    border-radius: 0;
    border-style: solid;
    border-width: 1px;
    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
    color: #333333;
    cursor: default;
    display: inline-block;
    font-size: 14px;
    line-height: 20px;
    margin-bottom: 0;
    margin-left: -1px;
    padding: 4px 12px;
    text-align: center;
    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
    vertical-align: middle;
}
#container_setDiv {
    background-color: transparent;
    cursor: default;
    height: 40px;
    left: 684px;
    margin: 10px;
    position: absolute;
    top: 585px;
    width: 150px;
}
#id_setDiv {
    background-color: transparent;
    cursor: default;
    float: left;
    height: 30px;
    margin-left: 12px;
    top: 5px;
    width: 120px;
}
#id_prev_next_div {
    float: left;
    clear: both;
    margin-top: 10px;
    display: none;
}
.btn-group > .btn:first-child {
    border-bottom-left-radius: 4px;
    border-top-left-radius: 4px;
    margin-left: 0;
    margin-right: -1pxpx;
}
.btn-group > .btn:last-child, .btn-group > .dropdown-toggle {
    border-bottom-right-radius: 4px;
    border-top-right-radius: 4px;
}
.btn-group > .btn + .btn {
    margin-left: -2px;
}
.btn:hover, .btn:active, .btn.active {
    background-color: #e6e6e6;
    color: #333333;
}
.btn_prev:hover, .btn_next:hover {
    background-color: #e6e6e6;
    background-image: url("");
}
.roundCorners {
    border-radius: 3px;
}

.letterSpace.highlightLetter{
    border: 2px solid blue;	
}

.letterSpace{
    border: 2px solid grey;
	
}

body[dir="rtl"] .playBtnLTR  {
    display: none;
}

body:not([dir="rtl"]) .playBtnRTL{
    display: none;
}

.playBtnLTR, .playBtnRTL {
    height: 27px;
    /* margin-top: 13px; */
    width: 27px;
}

.playBtnLTR,
.playBtnRTL{
    background-image: url("../../common/Library/images/playBtn_s1.png");
    background-size: cover;
    cursor: pointer;
    float: left;
}

.playBtnLTR:hover,
.playBtnRTL:hover{
    background-image: url("../../common/Library/images/playBtn_s2.png");
}


.playBtnRTL{
    transform: scale(-1, 1);
}

#feedbackText{
	text-align:left;
	overflow: auto;
	max-height: 41px;
}

.wordContainer[completed='true'] .wordClickGuard{
	display:block;
}

.wordClickGuard{
	display: none;
    width: 100%;
    
	height: 25px;
    background-color: grey;
    opacity: .5;
}

#clickGuard{
    background-color: black;

    width: 100%;
    height: 708px;
    position: absolute;
    top: 0px;
    left: 0px;
    opacity: .5;
}

